refactor: add unit tests for StockController and StockService, enhance validation and error handling